i18n/es/docusaurus-plugin-content-docs-ap/version-2.8/admin-guide/sep24/integration.mdx
---
title: Integración
sidebar_position: 30
---

import { CodeExample } from "@site/src/components/CodeExample";
import { AttributeTable } from "@site/src/components/AttributeTable";
import Security from "../component/security/security.mdx";
import UsingApiKey from "../component/security/api_key.mdx";
import UsingJwt from "../component/security/jwt.mdx";
import Rpc from "../component/rpc/rpc.mdx";
import RpcRequest from "../component/rpc/request.mdx";
import RpcResponse from "../component/rpc/response.mdx";
import RpcError from "../component/rpc/error.mdx";
import Observer from "../component/observer/observer.mdx";

Uno de los principales puntos de interacción con la Anchor Platform es notificar a la Anchor Platform sobre eventos relacionados con la transacción.

En general, querrás proporcionar actualizaciones para los siguientes eventos:

- Tu negocio está procesando la información KYC proporcionada por el usuario
- Tu negocio está listo para recibir fondos del usuario
- Tu negocio ha recibido fondos del usuario
- Tu negocio ha enviado fondos al usuario
- Tu negocio ha procesado un reembolso para la transacción del usuario
- Tu negocio experimentó un error inesperado

Esto se hace realizando solicitudes JSON-RPC al endpoint de la API de la platform. Las solicitudes JSON-RPC te permiten actualizar el estado de la transacción. Para mover la transacción a un estado específico, es necesario realizar una solicitud JSON-RPC correspondiente y pasar los datos que requiere este método RPC.

La API JSON-RPC de la Anchor Platform está diseñada para notificar a la plataforma sobre cambios en el estado de la transacción. Dado esto, se llamará a la API cada vez que un usuario o el ancla realice cualquier acción que progrese el estado de la transacción en el flujo.

La comunicación de la Anchor Platform sobre actualizaciones de transacciones, actualizaciones de clientes y creación de cotizaciones se maneja a través del servicio de eventos. Esta es una característica opcional que debe configurarse por separado de la integración SEP-6. Para más información, consulta [Manejo de Eventos][event-handling].

Puedes obtener más información sobre el flujo de la transacción y los estados en el [documento del protocolo SEP-24][sep-24]

## Callbacks

La Anchor Platform depende del servidor del negocio para proporcionar y almacenar información sobre cotizaciones.

### Cotizaciones y Honorarios

Para admitir el intercambio de activos no equivalentes, la Anchor Platform expone una API compatible con SEP-38 para proporcionar cotizaciones para el intercambio. La API de cotizaciones se utiliza para proporcionar al usuario la cantidad esperada del activo que recibirá a cambio del activo que está enviando. La API de cotizaciones también se utiliza para proporcionar al usuario las tarifas esperadas para la transacción. Por lo tanto, tu servidor del negocio debe implementar la [API de tarifas][rate-callback] para proporcionar cotizaciones a la Anchor Platform.

## Asegurando la API de la Plataforma

<Security />

### Usando Clave de API

<UsingApiKey />

### Usando JWT

<UsingJwt />

## Realizando Solicitudes JSON-RPC

<Rpc />

### Solicitud JSON-RPC

<RpcRequest />

### Respuesta JSON-RPC

<RpcResponse />

### Códigos de Error

<RpcError />

## Actualizando la Transacción de Depósito a través de JSON-RPC

El diagrama del flujo de depósito SEP-24 define la secuencia/reglas de la transición del estado de la transacción y un conjunto de métodos JSON-RPC que deben ser llamados para cambiar ese estado. No puedes definir el estado que deseas establecer para una transacción específica en tus solicitudes. Cada método JSON-RPC define las estructuras de datos que espera en la solicitud. Si la solicitud no contiene los atributos requeridos, la Anchor Platform devolverá un error y no cambiará el estado de la transacción.

[![flujo de depósito sep24](../../assets/sep24-deposit-flow-diagram.png)](../../assets/sep24-deposit-flow-diagram.png)

:::tip

Los estados en <span style={{color: "green"}}>verde</span> son obligatorios y definen el camino más corto.

Los estados en <span style={{color: "#B0BF1A"}}>amarillo</span> son opcionales y pueden ser omitidos.

Los estados en <span style={{color: "red"}}>rojo</span> significan que la transacción está en un estado de error o ha caducado.

:::

### Listo para Recibir Fondos

El primer paso del flujo de depósito después de iniciar el depósito en sí es recolectar KYC. Generalmente se realiza en la aplicación web, pero también puede ser proporcionado opcionalmente por la aplicación de billetera, utilizando [SEP-9]. Una vez que se haya recolectado el KYC necesario, se debe realizar una solicitud JSON-RPC `request_offchain_funds`.

<CodeExample>

```json
// request-offchain-funds.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "request_offchain_funds",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Request offchain funds",
      "amount_in": {
        "amount": 10,
        "asset": "iso4217:USD"
      },
      "amount_out": {
        "amount": 9,
        "asset": "stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
      },
      "amount_fee": {
        "amount": 1,
        "asset": "iso4217:USD"
      },
      "amount_expected": {
        "amount": 10
      }
    }
  }
]
```

</CodeExample>

- `amount_in` es la cantidad que el usuario tiene que enviar al negocio.
- `amount_out` es la cantidad que el usuario recibirá.
- `amount_fee` es la cantidad total de tarifas recaudadas por el negocio.
- `asset` es parte del campo `amount_x` y está en un formato SEP-38. En este ejemplo, se establece en USD, asumiendo que el usuario realizó una transferencia bancaria al sistema utilizando USD.

La información sobre las cantidades (en/salida/tarifa) es requerida si deseas mover la transacción del estado `incompleto` al estado `pending_user_transfer_start`. Si el estado de la transacción cambia de `pending_anchor` a `pending_user_transfer_start`, puedes omitir la definición de las cantidades.

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh request-offchain-funds.json
```

</CodeExample>

:::tip

Cuando el proceso KYC es largo (por ejemplo, verificación de ID), se recomienda primero establecer el estado de la transacción en `pending_anchor` utilizando la solicitud JSON-RPC `notify_interactive_flow_completed`. Esto indicará al usuario que el KYC está siendo procesado.

:::

### Procesando la Información KYC

:::tip

Este paso es opcional. La mayoría de los negocios no lo utilizan. Puedes omitirlo y pasar al [siguiente paso](#funds-received).

Utilizar este estado se recomienda cuando la verificación KYC puede necesitar realizarse de manera asincrónica.

:::

Debes especificar los campos `amount_x`.

<CodeExample>

```json
// kyc-in-process.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_interactive_flow_completed",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Interactive flow completed.",
      "amount_in": {
        "amount": 10,
        "asset": "iso4217:USD"
      },
      "amount_out": {
        "amount": 9,
        "asset": "stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
      },
      "amount_fee": {
        "amount": 1,
        "asset": "iso4217:USD"
      },
      "amount_expected": {
        "amount": 10
      }
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh kyc-in-process.json
```

</CodeExample>

### Fondos Recibidos

Si se recibieron fondos offchain, querrás proporcionar información de transacción actualizada.

<CodeExample>

```json
// offchain-funds-received.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_offchain_funds_received",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Offchain funds received",
      "funds_received_at": "2023-07-04T12:34:56Z",
      "external_transaction_id": "7...9",
      "amount_in": {
        "amount": 10
      },
      "amount_out": {
        "amount": 9
      },
      "amount_fee": {
        "amount": 1
      },
      "amount_expected": {
        "amount": 10
      }
    }
  }
]
```

</CodeExample>

- `funds_received_at` es la fecha y hora de recibir fondos
- `external_transaction_id` es el ID de la transacción en la red externa

Los campos de cantidad son opcionales. Si se omiten, los valores de las solicitudes JSON-RPC anteriores serán tomados.

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh offchain-funds-received.json
```

</CodeExample>

### Esperando Fondos del Usuario

En el mundo real, el proceso de confirmación de la transferencia puede llevar tiempo. En tales casos, las transacciones deben establecerse en un nuevo estado que indique que la confirmación de la transferencia ha sido recibida, pero los fondos en sí aún no han sido recibidos.

<CodeExample>

```json
// offchain-funds-sent.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_offchain_funds_sent",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Offchain funds sent",
      "funds_received_at": "2023-07-04T12:34:56Z",
      "external_transaction_id": "7...9"
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh offchain-funds-sent.json
```

</CodeExample>

### Enviando Fondos Onchain

A continuación, envía una transacción en la red Stellar para cumplir con una solicitud de usuario. Después de completar la transacción, es necesario enviar la solicitud JSON-RPC `notify_onchain_funds_sent` para notificar a un usuario que los fondos fueron enviados con éxito.

<CodeExample>

```json
// onchain-funds-sent.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_onchain_funds_sent",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Onchain funds sent",
      "stellar_transaction_id": "7...9"
    }
  }
]
```

</CodeExample>

- `stellar_transaction_id` es el ID de la transacción en la red Stellar de la transferencia

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh onchain-funds-sent.json
```

</CodeExample>

Después de esta solicitud JSON-RPC, la transacción se trasladará al estado `completed`.

### Enviando Pago a Través del Servicio de Custodia

La Anchor Platform ofrece la posibilidad de enviar un pago a través de servicios de custodia, como Fireblocks. Para realizar un pago a través del servicio de custodia, es necesario realizar la siguiente solicitud JSON-RPC:

<CodeExample>

```json
// do-stellar-payment.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "do_stellar_payment",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Custody payment started"
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh do-stellar-payment.json
```

</CodeExample>

Después del procesamiento exitoso del pago en el servicio de custodia, la Anchor Platform realizará automáticamente la solicitud JSON-RPC `notify_onchain_funds_sent` y el estado de la transacción cambiará a `completed`.

:::caution

Una cuenta de usuario puede no estar lista para recibir fondos. Puedes verificar que la cuenta ha establecido una [trustline](/docs/learn/glossary#trustline). De lo contrario, puedes establecer el estado de la transacción en `pending_trust` para indicar que el ancla está esperando a que el usuario establezca la trustline.

Si la integración de custodia está habilitada, la Anchor Platform hará esta validación automáticamente por ti.

:::

### Confianza Pendiente

Este estado debe establecerse si un pago requiere una trustline de activos que no ha sido configurada por el usuario. Hay dos formas en que la transacción puede trasladarse al estado `pending_trust`. La primera es el procesamiento de un pago a través del servicio de custodia en caso de que haya detectado que la trustline no está configurada. La segunda es cuando el negocio en sí detecta que falta la trustline y quiere notificar al usuario que debe configurarse. Para mover la transacción al estado `pending_trust`, es necesario realizar la siguiente solicitud JSON-RPC:

<CodeExample>

```json
// request-trust.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "request_trust",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Asset trustine not configured"
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh request-trust.json
```

</CodeExample>

:::info

El pago a través del servicio de custodia verifica periódicamente si se configuró la trustline. Si lo fue, enviará automáticamente un pago a un servicio de custodia y cambiará el estado de la transacción a `pending_stellar`.

:::

### Conjunto de Confianza

Este estado debe establecerse si el negocio ha detectado que la trustline fue o no configurada por el usuario.

<CodeExample>

```json
// trust-set.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_trust_set",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Asset trustine set",
      "success": "true"
    }
  }
]
```

</CodeExample>

- `success` flag que define si la trustline fue o no configurada por el usuario

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh trust-set.json
```

</CodeExample>

:::info

Dependiendo del `success` flag, el estado de la transacción cambiará a `pending_stellar` si se configuró la trustline, o a `pending_anchor` si no se configuró.

:::

### Enviando Reembolso a Través del Servicio de Custodia

Hay una posibilidad de enviar fondos de vuelta al usuario (reembolso). Puedes reembolsar la suma total (reembolso completo) o hacer un conjunto de reembolsos parciales. Además, si el usuario envió más dinero del esperado, puedes reembolsar una parte de la suma al usuario y enviar el resto como fondos onchain.

<CodeExample>

```json
// refund-sent.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_refund_sent",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Refund sent",
      "refund": {
        "id": "1c186184-09ee-486c-82a6-aa7a0ab1119c",
        "amount": {
          "amount": 10,
          "asset": "iso4217:USD"
        },
        "amount_fee": {
          "amount": 1,
          "asset": "iso4217:USD"
        }
      }
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh refund-sent.json
```

</CodeExample>

:::info

Si la suma de reembolsos es menor que `amount_in`, el estado de la transacción se establecerá en `pending_anchor`. Solo si la suma de reembolsos es igual a `amount_in`, el estado de la transacción se establecerá en `refunded`.

:::

### Reembolso Pendiente

Es similar a [Reembolso enviado](#refund-sent), pero maneja un caso cuando un reembolso ha sido enviado a la red externa pero aún no está confirmado. El estado de la transacción se establece en `pending_external`. Este es el estado que se establecerá al esperar que Bitcoin u otra red de criptomonedas externas complete una transacción, o cuando se espera una transferencia bancaria.

### Error de Transacción

Si encuentras un error irrecuperable al procesar la transacción, es necesario establecer el estado de la transacción en `error`. Puedes usar el campo de mensaje para describir los detalles del error.

<CodeExample>

```json
// transaction-error.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_transaction_error",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Error occurred"
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh transaction-error.json
```

</CodeExample>

:::tip

Si un usuario ha realizado una transferencia, debes hacer una recuperación de transacción, y luego puedes volver a intentar procesar la transacción o iniciar un reembolso.

:::

### Transacción Expirada

Tu negocio puede querer expirar transacciones que han sido abandonadas por el usuario después de un tiempo. Es una buena práctica limpiar transacciones inactivas en el estado `incompleto`. Para hacerlo, simplemente cambia el estado de la transacción a `expired`.

<CodeExample>

```json
// transaction-expired.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_transaction_expired",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Transaction expired"
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh transaction-expired.json
```

</CodeExample>

:::tip

Este método JSON-RPC no puede utilizarse después de que el usuario haya realizado una transferencia.

:::

### Transacción en Espera

En raras ocasiones, puede que desees pausar la transacción actual y solicitar más información del usuario (después de que se haya recibido la transferencia). Esto podría ser utilizado para casos de cumplimiento.

<CodeExample>

```json
// transaction-hold.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_transaction_on_hold",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Transaction is on hold. Please contact customer support to resolve the hold."
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh transaction-hold.json
```

</CodeExample>

### Recuperación de Transacción

El estado de la transacción puede cambiar de `error/expired` a `pending_anchor`. Después de la recuperación, puedes reembolsar los activos recibidos o proceder con el procesamiento de la transacción. Para recuperar una transacción, es necesario realizar la siguiente solicitud JSON-RPC:

<CodeExample>

```json
// transaction-recovery.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_transaction_recovery",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Transaction recovered"
    }
  }
]
```

</CodeExample>

Para ejecutar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh transaction-recovery.json
```

</CodeExample>

## Actualizando transacción de retirada de fondos a través de JSON-RPC

Este diagrama define una secuencia/reglas de la transición de estado de la transacción para el flujo de retirada SEP-24.

[![flujo de retirada sep24](../../assets/sep24-withdrawal-flow-diagram.png)](../../assets/sep24-withdrawal-flow-diagram.png)

:::tip

Los estados en <span style={{color: "green"}}>verde</span> son obligatorios y definen el camino más corto.

Los estados en <span style={{color: "#B0BF1A"}}>amarillo</span> son opcionales y se pueden omitir.

Los estados en <span style={{color: "red"}}>rojo</span> significan que la transacción está en un estado de error o ha caducado.

:::

Una vez que el flujo de depósito ha terminado, implementar la retirada de fondos es sencillo. Algunas partes del flujo son similares y se pueden reutilizar.

El punto de partida tanto para la retirada como para el depósito es el mismo.

### Listo para recibir fondos

Similar al depósito, el siguiente paso es notificar al usuario que el anchor está listo para recibir fondos. Sin embargo, dado que tu servicio recibirá transacciones a través de la red Stellar, la actualización se verá diferente.

<CodeExample>

```json
// request-onchain-funds.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "request_onchain_funds",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Request onchain funds",
      "amount_in": {
        "amount": 10,
        "asset": "stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
      },
      "amount_out": {
        "amount": 9,
        "asset": "iso4217:USD"
      },
      "amount_fee": {
        "amount": 1,
        "asset": "stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
      },
      "amount_expected": {
        "amount": 10
      },
      "destination_account": "GD...G",
      "memo": "12345",
      "memo_type": "id"
    }
  }
]
```

</CodeExample>

- `memo` Valor del memo para adjuntar a la transacción
- `memo_type` Tipo de memo que el anchor debe adjuntar a la transacción
- `destination_account` Cuenta de destino

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh request-onchain-funds.json
```

</CodeExample>

:::tip

Configurar `memo`, `memo_type` y `destination_account` es opcional.

Si la integración con un custodio de terceros está habilitada, la Anchor Platform puede generar `memo`, `memo_type` y `destination_address` si se elige un correspondiente `deposit_info_generator_type`. Además, puedes proporcionar `memo` y `memo_type` a la solicitud como se mostró arriba. Ten en cuenta que el memo debe ser único, esto es lo que ayuda a asociar transacciones Stellar con transacciones SEP.

Si tu negocio gestiona los activos, la Anchor Platform puede generar memos para ti. Cuando el estado cambie a `pending_user_transfer_start`, la Anchor Platform configura `memo` y `memo_type` automáticamente (solo si no están incluidos en la solicitud).

:::

:::note

La cuenta de Stellar que se utilizará para recibir fondos debe estar configurada.

:::

### Procesando información KYC

Este paso es opcional, y es similar a [Procesando información KYC](#processing-kyc-information) del flujo de depósito.

### Fondos recibidos

Si se recibieron fondos on-chain, necesitas proporcionar montos y cambiar el estado de la transacción a `pending_anchor`.

<CodeExample>

```json
// onchain-funds-received.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_onchain_funds_received",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Onchain funds received",
      "stellar_transaction_id": "7...9",
      "amount_in": {
        "amount": 10
      },
      "amount_out": {
        "amount": 9
      },
      "amount_fee": {
        "amount": 1
      }
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh onchain-funds-received.json
```

</CodeExample>

:::tip

Este método será llamado automáticamente por el servidor de custodia si la integración de custodia está habilitada.

:::

### Monto actualizado

Si se recibieron fondos on-chain, pero por alguna razón el `amount_in` difiere de lo especificado en el flujo interactivo (`amount_expected`), puedes actualizar `amount_out` y `amount_fee` para que correspondan al `amount_in` real. El estado de la transacción en este caso no cambiará y será igual a `pending_anchor`.

<CodeExample>

```json
// amounts-updated.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_amounts_updated",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Amounts updated",
      "amount_out": {
        "amount": 9
      },
      "amount_fee": {
        "amount": 1
      }
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh amounts-updated.json
```

</CodeExample>

:::note

Sólo `amount_out` y `amount_fee` pueden actualizarse usando esta solicitud JSON-RPC, y no necesitas especificar los activos de los montos.

:::

### Fondos enviados off-chain

Para completar la transacción y cambiar su estado a `completed`, necesitas realizar la solicitud JSON-RPC `notify_offchain_funds_sent`.

<CodeExample>

```json
// offchain-funds-sent.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_offchain_funds_sent",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Offchain funds sent",
      "funds_sent_at": "2023-07-04T12:34:56Z",
      "external_transaction_id": "a...c"
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh offchain-funds-sent.json
```

</CodeExample>

### Fondos off-chain disponibles

Puedes mover el estado de la transacción a `pending_user_transfer_complete` si se enviaron fondos off-chain y si está listo para que el usuario / destinatario lo recoja.

<CodeExample>

```json
// offchain-funds-available.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_offchain_funds_available",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Offchain funds available",
      "external_transaction_id": "a...c"
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh offchain-funds-available.json
```

</CodeExample>

### Fondos pending off-chain

Otra opción es mover el estado de la transacción a `pending_external`. Este estado significa que el pago ha sido enviado a una red externa, pero aún no está confirmado.

<CodeExample>

```json
// offchain-funds-pending.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "notify_offchain_funds_pending",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Offchain funds pending",
      "external_transaction_id": "a...c"
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh offchain-funds-pending.json
```

</CodeExample>

### Reembolso enviado

La lógica de reembolso funciona de la misma manera que para el flujo de depósito. Para más detalles, ver [Reembolso enviado](#refund-sent) del flujo de depósito.

### Enviando reembolso a través del servicio de custodia

La integración con un servicio de custodia te permite hacer un reembolso a través de un servicio de custodia, como Fireblocks.

<CodeExample>

```json
// do-stellar-refund.json
[
  {
    "id": 1,
    "jsonrpc": "2.0",
    "method": "do_stellar_refund",
    "params": {
      "transaction_id": "<transaction_id>",
      "message": "Do stellar refund",
      "refund": {
        "amount": {
          "amount": 9,
          "asset": "stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
        },
        "amount_fee": {
          "amount": 1,
          "asset": "stellar:USDC:GBBD47IF6LWK7P7MDEVSCWR7DPUWV3NY3DTQEVFL4NAT4AQH3ZLLFLA5"
        }
      }
    }
  }
]
```

</CodeExample>

Para procesar esto, necesitas ejecutar:

<CodeExample>

```bash
./call-json-rpc.sh do-stellar-refund.json
```

</CodeExample>

:::note

Similar al flujo de depósito, puedes hacer un reembolso completo o un conjunto de reembolsos parciales. La transacción se mantendrá en estado `pending_anchor` hasta que la suma de los reembolsos sea menor que `amount_in`. Si la suma de los reembolsos es igual a `amount_in`, la Anchor Platform cambiará automáticamente el estado de la transacción a `refunded`.

:::

### Error de transacción

Funciona de la misma manera que para el flujo de depósito. Para más detalles, ver [Error de transacción](#transaction-error) del flujo de depósito.

### Transacción caducada

Funciona de la misma manera que para el flujo de depósito. Para más detalles, ver [Transacción caducada](#expired-transaction) del flujo de depósito.

### Transacción en espera

Funciona de la misma manera que para el flujo de depósito. Para más detalles, ver [Transacción en espera](#on-hold-transaction) del flujo de depósito.

### Recuperación de transacción

Funciona de la misma manera que para el flujo de depósito. Para más detalles, ver [Recuperación de transacción](#transaction-recovery) del flujo de depósito.

## Rastreo de transacciones Stellar

<Observer />

[sep-9]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0009.md
[sep-24]: https://github.com/stellar/stellar-protocol/blob/master/ecosystem/sep-0024.md
[event-handling]: ../events/README.mdx
[rate-callback]: ../../api-reference/callbacks/README.mdx
[json-rpc-methods]: ../../api-reference/platform/rpc/methods/README.mdx
